Fix Arrow Vertical Alignment

--- a/src/metisMenu.css
+++ b/src/metisMenu.css
@@ -1,5 +1,6 @@
 .arrow {
     float: right;
+    line-height: 1.42857;
 }
 
 .glyphicon.arrow:before {
